JumpScript/tests/baselines/reference/ParameterList13.errors.txt
tests/cases/compiler/ParameterList13.jump(2,10): error TS2369: A parameter property is only allowed in a constructor implementation.


==== tests/cases/compiler/ParameterList13.jump (1 errors) ====
    interface I {
        new (public x);
             ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }